--- a/src/app/pages/supplier/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/edit-article/edit-article.component.html
@@ -58,7 +58,7 @@
             <div class="col-sm-6">
               <div class="form-group mb-4">
                 <label>Prix de vente UF</label>
-                <input class="form-control" formControlName="priceUf" type="number" id="price_uf" name="price_uf"
+                <input class="form-control" onkeypress="return false;" formControlName="priceUf" type="number" id="price_uf" name="price_uf"
                        placeholder="">
                 <p class="help-block font-11">Le prix est en Ariary</p>
               </div>
@@ -82,7 +82,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Prix R.</label>
-            <input class="form-control" formControlName="priceDealer" type="number" id="price_dealer" name="price_dealer"
+            <input class="form-control" onkeypress="return false;" formControlName="priceDealer" type="number" id="price_dealer" name="price_dealer"
                    placeholder="Ajouter un prix en AR">
             <div *ngIf="f.priceDealer.errors && f.priceDealer.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -92,7 +92,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Marge R.</label>
-            <input class="form-control" formControlName="margeDealer" type="number" id="marge_dealer" name="marge_dealer"
+            <input class="form-control" formControlName="margeDealer" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer" name="marge_dealer"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeDealer.errors && f.margeDealer.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
