--- a/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
+++ b/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
@@ -20,6 +20,7 @@
                   <option value="0">En attente</option>
                   <option value="2">Rejetés</option>
                   <option value="1">Envoyer</option>
+                  <option value="3">Envoyer</option>
                 </select>
                 <!-- <span class="help-block mt-2">This is some placeholder block-level help text for the above input.</span> -->
               </div>
