--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -14,7 +14,7 @@
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
       <li><a routerLink="/supplier/lists" routerLinkActive="active">Tous les fournisseurs</a></li>
-      <li><a [routerLink]="['/supplier', 'review']" routerLinkActive="active">En attente</a></li>
+      <li><a [routerLink]="['/supplier', 'review']" routerLinkActive="active">Attente de MAJ</a></li>
       <li><a routerLink="/supplier/new" routerLinkActive="active">Ajouter</a></li>
     </ul>
   </li>
@@ -26,7 +26,7 @@
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
       <li><a routerLink="/supplier/articles" routerLinkActive="active">Tous les articles</a></li>
-      <li><a routerLink="/supplier/article/review" routerLinkActive="active">En attente</a></li>
+      <li><a routerLink="/supplier/article/review" routerLinkActive="active">Attente de MAJ</a></li>
     </ul>
   </li>
   <li routerLinkActive="active" style="display: none;">
@@ -69,6 +69,12 @@
     <a [routerLink]="['/faq']" routerLinkActive="active" >
       <i class="sidebar-item-icon ti-help-alt"></i>
       <span class="nav-label">Techniques de vente</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
+    <a routerLinkActive="active" routerLink="/settings">
+      <i class="sidebar-item-icon ti-settings"></i>
+      <span class="nav-label">Paramètres</span>
     </a>
   </li>
 </ul>
