--- a/src/app/pages/clients/edit-client/edit-client.component.html
+++ b/src/app/pages/clients/edit-client/edit-client.component.html
@@ -11,11 +11,10 @@
       <div class="ibox ibox-fullheight">
         <form class="ibox-body" [formGroup]="Form" id="supplier-form" (ngSubmit)="onSubmit()">
           <p class="lead mb-0 pb-0 font-bold">Modification</p>
-          <div class="mb-4" [ngClass]="{'badge badge-blue': roleOffice === 1 || roleOffice === 2, 'badge badge-pink': roleOffice === 0}">
+          <div class="badge mb-4"
+            [ngClass]="{'badge-blue': roleOffice === 1 || roleOffice === 2, 'badge-pink': roleOffice === 0}">
             {{roleOffice === 0 ? 'En attente' : (roleOffice === 1 ? 'Acheteur' : 'Revendeur')}}
           </div>
-
-
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group mb-4">
@@ -25,22 +24,22 @@
               </div>
             </div>
             <div class="col-md-6">
-                <div class="form-group mb-4">
-                  <label class="font-light">Prénom</label>
-                  <input class="form-control" autocomplete="off" formControlName="first_name" type="text" id="first_name"
-                    name="first_name" placeholder="">
-                </div>
+              <div class="form-group mb-4">
+                <label class="font-light">Prénom</label>
+                <input class="form-control" autocomplete="off" formControlName="first_name" type="text" id="first_name"
+                  name="first_name" placeholder="">
               </div>
+            </div>
           </div>
 
           <div class="row">
-              <div class="col-md-6">
-                  <div class="form-group mb-4">
-                    <label class="font-light">Adresse E-mail</label>
-                    <input class="form-control" autocomplete="off" formControlName="email" type="text" id="email"
-                      name="email" placeholder="">
-                  </div>
+            <div class="col-md-6">
+              <div class="form-group mb-4">
+                <label class="font-light">Adresse E-mail</label>
+                <input class="form-control" autocomplete="off" formControlName="email" type="text" id="email"
+                  name="email" placeholder="">
               </div>
+            </div>
           </div>
 
           <div class="row">
@@ -142,16 +141,10 @@
               </div>
 
               <div class="form-group mb-4">
-                  <label class="font-light">Adresse E-mail</label>
-                  <input class="form-control" autocomplete="off" formControlName="email" id="bill_email"
-                    name="bill_email" type="text" placeholder="">
-                </div>
-
-              <div class="form-group mb-4">
-                  <label class="font-light">Pays</label>
-                  <input class="form-control" autocomplete="off" formControlName="country" id="country" name="country" type="text"
-                    placeholder="">
-                </div>
+                <label class="font-light">Adresse E-mail</label>
+                <input class="form-control" autocomplete="off" formControlName="email" id="bill_email" name="bill_email"
+                  type="text" placeholder="">
+              </div>
 
               <div class="form-group mb-4">
                 <label class="font-light">Ville</label>
