--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="ibox-block">
-                <table class="table mb-0" *ngIf="!loading">
+                <table class="table mb-0">
                     <thead class="thead-default thead-lg">
                         <tr>
                             <th class="pl-4">Désignation</th>
@@ -102,6 +102,6 @@
 </div>
 <div class="modal-footer justify-content-between bg-primary-50">
   <div>
-    <button class="btn btn-primary btn-rounded mr-3" [disabled]="loading" (click)="onSendMail()">Envoyer par email</button>
+    <button class="btn btn-primary btn-rounded mr-3" [disabled]="order.status === 'completed'" (click)="onSendMail()">Envoyer par email</button>
   </div>
 </div>
