--- a/src/app/components/type-client-switcher/type-client-switcher.component.html
+++ b/src/app/components/type-client-switcher/type-client-switcher.component.html
@@ -11,11 +11,11 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group mb-4">
-          <p class="font-strong">Acheteur / Revendeur</p>
+          <p class="font-strong">Professionnel(UF) / Revendeur</p>
           <select class="form-control" formControlName="type">
-            <option value="0">En attente</option>
-            <option value="1">Acheteur</option>
-            <option value="2">Revendeur</option>
+            <option value="">En attente</option>
+            <option value="professional">Professionnel</option>
+            <option value="dealer">Revendeur</option>
           </select>
         </div>
       </div>
