--- a/src/app/pages/supplier/article-supplier/article-supplier.component.html
+++ b/src/app/pages/supplier/article-supplier/article-supplier.component.html
@@ -88,7 +88,8 @@
 
       <div class="modal fade" id="edit-article-supplier-modal" data-backdrop="static">
         <div class="modal-dialog" role="document">
-          <app-edit-article [Article]="Editor" (refresh)="onRefreshResults()"></app-edit-article>
+          
+          <app-edit-article [article]="Editor" (refresh)="onRefreshResults()"></app-edit-article>
         </div>
       </div>
 
