--- a/src/app/pages/supplier/add-article/add-article.component.html
+++ b/src/app/pages/supplier/add-article/add-article.component.html
@@ -26,7 +26,7 @@
           <div class="col-md-12">
             <div class="form-group mb-4">
               <label>Designation</label>
-              <input class="form-control" autocomplete="off" formControlName="title" type="text" id="title" name="title"
+              <input class="form-control" autocomplete="off" formControlName="title" type="text" id="title" 
                    placeholder="Designation">
             </div>
           </div>
@@ -39,7 +39,7 @@
             <div class="col-md-6">
               <div class="form-group mb-4">
                 <label>Prix de revient</label>
-                <input class="form-control" formControlName="price" type="number" id="price" name="price"
+                <input class="form-control" formControlName="price" type="number" id="price" 
                        placeholder="Ajouter un prix en AR">
                 <div *ngIf="f.price.errors && f.price.dirty">
                   <label id="price-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -52,19 +52,19 @@
         <div class="col-12">
           <div class="row">
             <div class="col-sm-6">
-              <div class="form-group mb-4">
+              <div class="form-group mb-2">
                 <label>Prix de vente UF</label>
-                <input class="form-control" onkeypress="return false;" formControlName="priceUf" type="number" id="price_uf" name="price_uf"
+                <input class="form-control" onkeypress="return false;" formControlName="pricePro" type="number" id="price_pro" 
                        placeholder="">
                 <p class="help-block font-11"></p>
               </div>
             </div>
             <div class="col-sm-6">
-              <div class="form-group mb-4">
+              <div class="form-group mb-2">
                 <label>Marge</label>
-                <input class="form-control" formControlName="marge" (ngModelChange)="onChangeMarge($event)" type="number" id="marge" name="marge"
+                <input class="form-control" formControlName="margePro" (ngModelChange)="onChangeMarge($event)" type="number" id="marge" 
                        placeholder="Ajouter une marge">
-                <div *ngIf="f.marge.errors && f.marge.dirty">
+                <div *ngIf="f.margePro.errors && f.margePro.dirty">
                   <label id="marge-error" class="help-block error">Ce champ est obligatoire.</label>
                 </div>
               </div>
@@ -76,9 +76,9 @@
       <div class="text-muted mb-2 mt-3">Revendeur</div>
       <div class="row">
         <div class="col-md-6">
-          <div class="form-group mb-4">
+          <div class="form-group mb-2">
             <label>Prix R.</label>
-            <input class="form-control" onkeypress="return false;" formControlName="priceDealer" type="number" id="price_dealer" name="price_dealer"
+            <input class="form-control" onkeypress="return false;" formControlName="priceDealer" type="number" id="price_dealer" 
                    placeholder="">
             <div *ngIf="f.priceDealer.errors && f.priceDealer.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
@@ -86,11 +86,35 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="form-group mb-4">
+          <div class="form-group mb-2">
             <label>Marge R.</label>
-            <input class="form-control" formControlName="margeDealer" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer" name="marge_dealer"
+            <input class="form-control" formControlName="margeDealer" type="number" (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer"
                    placeholder="Ajouter une marge">
             <div *ngIf="f.margeDealer.errors && f.margeDealer.dirty">
+              <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-muted mb-2 mt-3">Particulier</div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group mb-2">
+            <label>Prix P.</label>
+            <input class="form-control" onkeypress="return false;" formControlName="priceParticular" type="number" id="price_particular" 
+                   placeholder="">
+            <div *ngIf="f.priceParticular.errors && f.priceParticular.dirty">
+              <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group mb-2">
+            <label>Marge P.</label>
+            <input class="form-control" formControlName="margeParticular" type="number" (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular"
+                   placeholder="Ajouter une marge">
+            <div *ngIf="f.margeParticular.errors && f.margeParticular.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
             </div>
           </div>
