--- a/src/app/pages/supplier/review-articles/review-articles.component.html
+++ b/src/app/pages/supplier/review-articles/review-articles.component.html
@@ -8,7 +8,7 @@
     <div class="modal fade" id="edit-article-supplier-modal">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-          <app-edit-article [Article]="editArticle" (refresh)="reload()"></app-edit-article>
+          <app-edit-article [article]="editArticle" (refresh)="reload()"></app-edit-article>
         </div>
       </div>
     </div>
