--- a/src/app/pages/dashboard-7/dashboard-7.component.html
+++ b/src/app/pages/dashboard-7/dashboard-7.component.html
@@ -6,6 +6,7 @@
       </div>
     </div>
     <div class="col-lg-4">
+      <app-modulo-review-suppliers></app-modulo-review-suppliers>
       <app-new-customer></app-new-customer>
     </div>
   </div>
