--- a/src/app/pages/supplier/review-articles/review-articles.component.html
+++ b/src/app/pages/supplier/review-articles/review-articles.component.html
@@ -31,11 +31,11 @@
             <table class="table table-hover" id="articles-review-table">
               <thead class="thead-default thead-lg">
                 <tr>
-                  <th class="pl-4">Nom</th>
-                  <th>Nbr</th>
+                  <th class="pl-4">Designation</th>
+                  <th>Qté</th>
                   <th>Date de revision</th>
                   <th>Fournisseurs</th>
-                  <th class="pr-4">Action</th>
+                  <th class="pr-4"></th>
                 </tr>
               </thead>
             </table>
