--- a/src/app/pages/customer/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer/customer-edit/customer-edit.component.html
@@ -75,7 +75,7 @@
               <div class="col-6">{{Client.shipping.last_name}}</div>
           </div>
           <div class="row mb-2">
-              <div class="col-6 text-muted">Scoiété:</div>
+              <div class="col-6 text-muted">Société:</div>
               <div class="col-6">{{Client.shipping.company}}</div>
           </div>
           <div class="row mb-2">
