--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -10,8 +10,14 @@
     <div class="">
         <div class="ibox-body">
             <div class="row mb-5 pb-3">
+                <div class="col-6"></div>
                 <div class="col-6 text-right">
-                    <h5 class="font-strong text-success mb-3">{{billingAdress.first_name}} {{billingAdress.last_name}}</h5>
+                    <h5 class="font-strong text-success mb-3" *ngIf="billingAdress.company === ''">
+                      {{billingAdress.first_name}} {{billingAdress.last_name}}
+                    </h5>
+                    <h5 class="font-strong text-success mb-3" *ngIf="billingAdress.company !== ''">
+                        {{billingAdress.company}}
+                    </h5>
                     <div class="text-light">{{billingAdress.address_1}}, {{billingAdress.postcode}} {{billingAdress.city}}.</div>
                     <div class="text-light">{{billingAdress.email}}</div>
                     <div class="text-light mb-4">{{billingAdress.phone}}</div>
