--- a/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
+++ b/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
@@ -3,7 +3,7 @@
     <div>
       <h5 class="modal-title text-white">ENVOYER PAR E-MAIL
       </h5>
-      <small class="text-white">à {{Fournisseur.data.user_email}} pour {{Fournisseur.company_name}} ({{Fournisseur.reference}})</small>
+      <small class="text-white">à {{Fournisseur.email}} pour {{Fournisseur.company_name}} ({{Fournisseur.reference}})</small>
 
     </div>
     <button class="close text-white" type="button" data-dismiss="modal" aria-label="Close">
