--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -31,7 +31,7 @@
       <i class="fa fa-angle-left arrow"></i>
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
-      <li><a routerLink="/supplier/articles" routerLinkActive="active">Tous les articles</a></li>
+      <li><a routerLink="/articles" routerLinkActive="active">Tous les articles</a></li>
       <li><a routerLink="/supplier/article/review" routerLinkActive="active">Attente de MAJ</a></li>
     </ul>
   </li>
