--- a/src/app/pages/faq/faq-page/faq-page.component.html
+++ b/src/app/pages/faq/faq-page/faq-page.component.html
@@ -1,89 +1,120 @@
 <div class="page-content fade-in-up">
   <div class="flexbox-b mb-5">
-      <span class="mr-4 static-badge badge-info"><i class="ti-help"></i></span>
-      <div>
-          <h5 class="font-strong">Techniques de vente</h5>
-          <div class="text-light">Description ici...</div>
-      </div>
+    <span class="mr-4 static-badge badge-info"><i class="ti-help"></i></span>
+    <div>
+      <h5 class="font-strong">Techniques de vente</h5>
+      <div class="text-light"></div>
+    </div>
   </div>
   <div class="row">
-      <div class="col-lg-3">
-          <button *ngIf="isAdministrator" class="btn btn-primary btn-rounded btn-block mb-4" data-toggle="modal" data-target="#question-dialog">
-              <span class="btn-icon"><i class="la la-plus-circle"></i>Ajouter</span>
-          </button>
-          <ul class="list-group list-group-divider faq-tabs">
-              <li class="list-group-item" *ngFor="let group of listGroup; let i = index">
-                  <a  [ngClass]="{'active': i === 0}" href="#accordion-{{group.id}}" data-toggle="tab">
-                    <i class="badge-point badge-primary mr-3"></i>{{group.name}}</a>
+    <div class="col-lg-3">
+      <button *ngIf="isAdministrator" class="btn btn-primary btn-rounded btn-block mb-4" data-toggle="modal"
+        data-target="#question-dialog">
+        <span class="btn-icon"><i class="la la-plus-circle"></i>Ajouter</span>
+      </button>
+      <ul class="list-group list-group-divider faq-tabs">
+        <li class="list-group-item" *ngFor="let group of listGroup; let i = index">
+          <a [ngClass]="{'active': i === 0}" href="#accordion-{{group.id}}" data-toggle="tab">
+            <i class="badge-point badge-primary mr-3"></i>{{group.name}}</a>
+        </li>
+      </ul>
+      <button *ngIf="isAdministrator" class="btn btn-secondary btn-rounded btn-block mb-4" data-toggle="modal"
+        data-target="#new-term-dialog">
+        <span class="btn-icon"><i class="la la-plus-circle"></i>Ajouter une term</span>
+      </button>
+    </div>
+    <div class="col-lg-9">
+      <div class="ibox">
+        <div class="ibox-body tab-content">
+          <div class="tab-pane fade" [ngClass]="{'active show': iGroup === 0}" id="accordion-{{group.id}}"
+            *ngFor="let group of listGroup; let iGroup = index">
+            <h5 class="font-strong mb-4 text-primary uppercase">{{group.name}}</h5>
+            <ul class="list-group list-group-divider list-group-full faq-list">
+
+              <li class="list-group-item" *ngFor="let faq of faqByGroup(group.id); let iFaq = index">
+                <a class="font-strong" data-toggle="collapse" href="#faq{{iGroup}}-{{iFaq}}">{{faq.title.rendered}}</a>
+                <div class="collapse show" id="faq{{iGroup}}-{{iFaq}}">
+                  <div class="p-3 bg-primary-50 mt-3" [innerHTML]="faq.content.rendered"></div>
+                  <div class="bg-primary-50" *ngIf="isAdministrator">
+                    <span (click)="onEdit(faq.id)" class="btn btn-link btn-sm">Modifier</span>
+                    <span (click)="onRemove(faq.id)" class="btn btn-link btn-sm">Supprimer</span>
+                  </div>
+                </div>
               </li>
-          </ul>
-      </div>
-      <div class="col-lg-9">
-          <div class="ibox">
-              <div class="ibox-body tab-content">
-                  <div class="tab-pane fade" [ngClass]="{'active show': iGroup === 0}" id="accordion-{{group.id}}" *ngFor="let group of listGroup; let iGroup = index">
-                      <h5 class="font-strong mb-4 text-primary uppercase">{{group.name}}</h5>
-                      <ul class="list-group list-group-divider list-group-full faq-list">
 
-                          <li class="list-group-item" *ngFor="let faq of faqByGroup(group.id); let iFaq = index">
-                              <a class="font-strong" data-toggle="collapse" href="#faq{{iGroup}}-{{iFaq}}">{{faq.title.rendered}}</a>
-                              <div class="collapse show" id="faq{{iGroup}}-{{iFaq}}">
-                                  <div class="p-3 bg-primary-50 mt-3" [innerHTML]="faq.content.rendered"></div>
-                                  <div class="bg-primary-50" *ngIf="isAdministrator">
-                                    <span (click)="onEdit(faq.id)" class="btn btn-link btn-sm">Modifier</span>
-                                    <span (click)="onRemove(faq.id)" class="btn btn-link btn-sm">Supprimer</span>
-                                  </div>
-                              </div>
-                          </li>
-                          
-                      </ul>
-                  </div>
-              </div>
+            </ul>
           </div>
+        </div>
       </div>
+    </div>
   </div>
 
+  <!-- Ajouter une article -->
   <div class="modal fade" id="question-dialog" aria-labelledby="question-dialog" tabindex="-1" role="dialog">
-      <div class="modal-dialog modal-lg" role="document">
-          <form class="modal-content" [formGroup]="newForm" (ngSubmit)="onSubmit()" *ngIf="isAdministrator">
-              <div class="modal-header p-4">
-                  <h5 class="modal-title">MODIFIER/AJOUTER UNE TECHNIQUE DE VENTE</h5>
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">×</span>
-                  </button>
+    <div class="modal-dialog modal-lg" role="document">
+      <form class="modal-content" [formGroup]="newForm" (ngSubmit)="onSubmit()" *ngIf="isAdministrator">
+        <div class="modal-header p-4">
+          <h5 class="modal-title">MODIFIER/AJOUTER UNE TECHNIQUE DE VENTE</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body p-4">
+          <div class="form-group mb-4">
+            <input class="form-control form-control-line" type="text" formControlName="title" placeholder="Titre">
+          </div>
+          <div class="form-group mb-4">
+            <label class="text-muted mb-3">Categorie</label>
+            <div>
+              <label *ngFor="let group of listGroup; let iGroup = index"
+                class="radio radio-outline-primary radio-inline" data-toggle="tooltip"
+                [attr.data-original-title]="group.name">
+                <input type="radio" formControlName="category" [value]="group.id">
+                <span class="input-span"></span>
+                {{group.name}}
+              </label>
+            </div>
+          </div>
+
+          <div class="form-group mb-4">
+            <div class="form-group mb-4">
+              <label class="font-light">Description</label>
+              <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" formControlName="content" name="projet"
+                [init]="tinyMCESettings"></editor>
+              <div *ngIf="f.content.errors && f.content.dirty">
+                <label class="help-block error" for="name">Ce champ est obligatoire.</label>
               </div>
-              <div class="modal-body p-4">
-                  <div class="form-group mb-4">
-                      <input class="form-control form-control-line" type="text" formControlName="title" placeholder="Titre">
-                  </div>
-                  <div class="form-group mb-4">
-                      <label class="text-muted mb-3">Categorie</label>
-                      <div>
-                          <label *ngFor="let group of listGroup; let iGroup = index"
-                          class="radio radio-outline-primary radio-inline" 
-                          data-toggle="tooltip" [attr.data-original-title]="group.name">
-                              <input type="radio" formControlName="category" [value]="group.id" >
-                              <span class="input-span"></span>
-                              {{group.name}}
-                          </label>
-                      </div>
-                  </div>
-                  
-                  <div class="form-group mb-4">
-                      <div class="form-group mb-4">
-                          <label class="font-light">Description</label>
-                          <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" formControlName="content"
-                              name="projet" [init]="tinyMCESettings"></editor>
-                          <div *ngIf="f.content.errors && f.content.dirty">
-                            <label class="help-block error" for="name">Ce champ est obligatoire.</label>
-                          </div>
-                        </div>
-                  </div>
-              </div>
-              <div class="modal-footer justify-content-start bg-primary-50">
-                  <button class="btn btn-primary btn-rounded mr-3" type="submit">Enregistrer</button>
-              </div>
-          </form>
-      </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer justify-content-start bg-primary-50">
+          <button class="btn btn-primary btn-rounded mr-3" type="submit">Enregistrer</button>
+        </div>
+      </form>
+    </div>
   </div>
+
+  <!-- ajouter une term -->
+  <div class="modal fade" id="new-term-dialog" aria-labelledby="new-term-dialog" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <form class="modal-content" [formGroup]="newTermForm" (ngSubmit)="onSubmitNewTerm()" *ngIf="isAdministrator">
+          <div class="modal-header p-4">
+            <h5 class="modal-title">AJOUTER UNE TERM</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body p-4">
+            <div class="form-group mb-4">
+              <label class="text-muted mb-3">Categorie</label>
+              <input class="form-control form-control-line" type="text" formControlName="title" placeholder="Titre">
+            </div>
+  
+          </div>
+          <div class="modal-footer justify-content-start bg-primary-50">
+            <button class="btn btn-primary btn-rounded mr-3" type="submit">Ajouter</button>
+          </div>
+        </form>
+      </div>
+    </div>
 </div>
